add additional logic for operator to perform various functions based on variable values

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
                     <button class= 'number' id='7'>7</button>
                     <button class= 'number' id='8'>8</button>
                     <button class= 'number' id="9">9</button>
+                    <button id="clr">C</button>
+                    <button class= "number" id="0">0</button> 
+                    <button class= "number" id=".">.</button> 
                 </div>
                 <div class="operators">  
-                    <button id="clr">Clr</button>
                     <button class="operator" id='+'>+</button>
                     <button class="operator" id='-'>-</button>
                     <button class="operator" id='*'>*</button>
