--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <button class= "number" id=".">.</button> 
                 </div>
                 <div class="operators">  
-                    <button class="operator" id='+'>+</button>
-                    <button class="operator" id='-'>-</button>
-                    <button class="operator" id='*'>*</button>
-                    <button class="operator" id='/'>/</button>
+                    <button class="operator" id='+' id= "plus" >+</button>
+                    <button class="operator" id='-' id= 'minus' >-</button>
+                    <button class="operator" id='*' id= 'times' >*</button>
+                    <button class="operator" id='/' id= 'divide' >/</button>
                     <button class = "equals" id="=">=</button> 
                 </div>
             </div>
